# clickhouse-rs

./: .gitignore  Cargo.toml  Makefile  docker-compose.yaml
src/: entities.rs  lib.rs
tests/: lib.rs
